--- a/Gangwars_Client/Client/UI/main.html
+++ b/Gangwars_Client/Client/UI/main.html
@@ -34,14 +34,19 @@
 <body onload="uhr();">
     <div id="teamselection" class="team d-none">
         <div class="bg"></div>
-        <div class="team_1" onclick="alt.emit('selectedTeam', 1);">Grove Streets</div>
-        <div class="team_2" onclick="alt.emit('selectedTeam', 2);">Yakuza</div>
-        <div class="team_3" onclick="alt.emit('selectedTeam', 3);">Vagos</div>
-        <div class="team_4" onclick="alt.emit('selectedTeam', 4);">Ballas</div>
+        <div class="team_1" onclick="alt.emit('selectedTeam', 1);">LSPD</div>
+        <div class="team_2" onclick="alt.emit('selectedTeam', 2);">LCN</div>
+        <div class="team_3" onclick="alt.emit('selectedTeam', 3);">Yakuza</div>
+        <div class="team_6" onclick="alt.emit('selectedTeam', 6);">FIB</div>
+        <div class="team_7" onclick="alt.emit('selectedTeam', 7);">Narcos</div>
+        <div class="team_8" onclick="alt.emit('selectedTeam', 8);">US-Army</div>
+        <div class="team_9" onclick="alt.emit('selectedTeam', 9);">SAMCRO</div>
+        <div class="team_12" onclick="alt.emit('selectedTeam', 12);">Ballas</div>
+        <div class="team_13" onclick="alt.emit('selectedTeam', 13);">Compton</div>
     </div>
     <div id="UI" class="d-none">
         <div class="ui_header">
-            <div class="ui_header_info">alt:V Gangwars</div>
+            <div class="ui_header_info">V2-Gangwars</div>
             <div class="ui_header_clock">04.05.2020 - 14:48:54 Uhr</div>
         </div>
     </div>
