--- a/Gangwars_Client/Client/RegisterLogin/main.html
+++ b/Gangwars_Client/Client/RegisterLogin/main.html
@@ -5,15 +5,15 @@
 </head>
 
 <body>
-        <div class="register_login_main">
-                <div class="register_login_header_background"></div>
-                <img class="register_login_header" src="files/images/logo.png">
-                <div class="button_login">Login</div>
-                <div class="button_register">Register</div>
-                <script src="script.js"></script>
-                <input id="register_username" class="register_username" type="text"
+    <div class="register_login_main">
+        <div class="register_login_header_background">V2 - Gangwars</div>
+        <!-- <img class="register_login_header" src="files/images/logo.png"> -->
+        <div class="button_login">Login</div>
+        <div class="button_register">Register</div>
+        <script src="script.js"></script>
+        <input id="register_username" class="register_username" type="text"
                         placeholder="Username hier eintippen..." cols="30" rows="1">
-                <input id="register_password" class="register_password" type="password"
+        <input id="register_password" class="register_password" type="password"
                         placeholder="Passwort hier eintippen..." cols="30" rows="1">
-        </div>
+    </div>
 </body>
